--- a/dsgfiles2-main/index.html
+++ b/dsgfiles2-main/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <link rel="stylesheet" href="/styling.css">
+        <link rel="stylesheet" href="./"styling.css">
         <body>
             <h1 class="title">damilare search engine</h1>
             <div class="center">
